# abseil-cpp

./: .gitignore  CMakeLists.txt  MODULE.bazel  Package.swift  README.md  WORKSPACE  abseil-cpp.lua  conanfile.py  conanfile_rtc.py  make_swift_package.py
absl/: BUILD.bazel  CMakeLists.txt  cc_static_library.bzl  copts.bzl
absl/algorithm/: BUILD.bazel
absl/algorithm/include/absl/algorithm/: algorithm.h  container.h
absl/base/: BUILD.bazel  CMakeLists.txt  attributes.h  c_header_test.c  config.h  no_destructor_benchmark.cc  optimization_test.cc  options.h  throw_delegate_test.cc
absl/base/include/absl/base/: attributes.h  call_once.h  casts.h  config.h  const_init.h  dynamic_annotations.h  log_severity.h  macros.h  no_destructor.h  nullability.h  optimization.h  options.h  policy_checks.h  port.h  prefetch.h  thread_annotations.h
absl/base/internal/: atomic_hook.h  cmake_thread_test.cc  direct_mmap.h  low_level_alloc.cc  low_level_alloc_test.cc  pretty_function.h  raw_logging.h  spinlock_akaros_inc.h  spinlock_benchmark.cc  spinlock_linux_inc.h  spinlock_posix_inc.h  spinlock_wait.cc  spinlock_win32_inc.h  strerror_benchmark.cc  thread_identity.cc  thread_identity.h  thread_identity_benchmark.cc  unscaledcycleclock.cc
absl/cleanup/: BUILD.bazel
absl/cleanup/include/absl/cleanup/: cleanup.h
absl/container/: BUILD.bazel  btree_benchmark.cc  btree_test.cc  fixed_array_benchmark.cc  flat_hash_map.h  flat_hash_map_test.cc  flat_hash_set.h  flat_hash_set_test.cc  inlined_vector_benchmark.cc  inlined_vector_test.cc  node_hash_map.h  node_hash_map_test.cc  node_hash_set.h
absl/container/include/absl/container/: btree_map.h  btree_set.h  btree_test.h  fixed_array.h  flat_hash_map.h  flat_hash_set.h  inlined_vector.h  node_hash_map.h  node_hash_set.h
absl/container/internal/: compressed_tuple.h  container_memory.h  container_memory_test.cc  hash_function_defaults.h  hashtablez_sampler.cc  hashtablez_sampler.h  layout.h  layout_benchmark.cc  layout_test.cc  raw_hash_set.cc  raw_hash_set.h  raw_hash_set_benchmark.cc  raw_hash_set_probe_benchmark.cc  raw_hash_set_test.cc
absl/copts/: GENERATED_AbseilCopts.cmake
absl/crc/: BUILD.bazel  crc32c.cc  crc32c.h  crc32c_benchmark.cc
absl/crc/include/absl/crc/: crc32c.h
absl/crc/internal/: cpu_detect.cc  crc32_x86_arm_combined_simd.h  crc_internal.h  crc_x86_arm_combined.cc
absl/debugging/: BUILD.bazel  failure_signal_handler.cc  failure_signal_handler_test.cc  stacktrace.cc  stacktrace_benchmark.cc  symbolize.cc  symbolize_darwin_inc.h  symbolize_elf_inc.h  symbolize_emscripten_inc.h  symbolize_test.cc  symbolize_unimplemented_inc.h  symbolize_win32.inc  symbolize_win32_inc.h
absl/debugging/include/absl/debugging/: failure_signal_handler.h  leak_check.h  stacktrace.h  symbolize.h  symbolize_darwin.inc  (+4 more)
absl/debugging/internal/: demangle_test.cc  stacktrace_aarch64-inl_inc.h  stacktrace_arm-inl_inc.h  stacktrace_emscripten-inl_inc.h  stacktrace_generic-inl_inc.h  stacktrace_powerpc-inl_inc.h  stacktrace_riscv-inl_inc.h  stacktrace_unimplemented-inl_inc.h  stacktrace_win32-inl.inc  stacktrace_win32-inl_inc.h  stacktrace_x86-inl_inc.h
absl/flags/: BUILD.bazel  commandlineflag.h  flag.h  flag_benchmark.cc  flag_test.cc  parse.cc  parse.h  parse_test.cc
absl/flags/internal/: commandlineflag.h  flag.h  flag_msvc_inc.h  internal_flag.cc  parse.h  usage_test.cc
absl/functional/: BUILD.bazel  function_ref_test.cc  function_type_benchmark.cc
absl/functional/internal/: any_invocable.h
absl/hash/: BUILD.bazel  hash_benchmark.cc  hash_test.cc
absl/hash/internal/: hash.cc  hash.h  print_hash_of.cc  spy_hash_state.h
absl/log/: BUILD.bazel  absl_check_test.cc  absl_log_basic_test.cc  check.h  check_test.cc  check_test_impl.inc  check_test_impl_inc.h  globals_test.cc  log.h  log_basic_test.cc  log_basic_test_impl_inc.h  log_benchmark.cc  log_format_test.cc  log_sink_test.cc  stripping_test.cc
absl/log/internal/: BUILD.bazel  fnmatch_benchmark.cc  test_matchers.cc  vlog_config_benchmark.cc
absl/memory/: BUILD.bazel
absl/meta/: BUILD.bazel  type_traits.h
absl/numeric/: BUILD.bazel  bits_benchmark.cc  int128.h  int128_benchmark.cc  int128_have_intrinsic_inc.h  int128_no_intrinsic_inc.h
absl/numeric/internal/: bits.h
absl/profiling/: BUILD.bazel  benchmark.h
absl/profiling/internal/: periodic_sampler_benchmark.cc
absl/random/: BUILD.bazel  benchmarks.cc  discrete_distribution.cc
absl/random/internal/: BUILD.bazel  gaussian_distribution_gentables.cc  nanobenchmark_test.cc  randen_benchmarks.cc  randen_hwaes_test.cc
absl/status/: BUILD.bazel  status_benchmark.cc  statusor_benchmark.cc
absl/strings/: BUILD.bazel  CMakeLists.txt  ascii.h  ascii_benchmark.cc  atod_manual_test.cc  charconv_benchmark.cc  charset_benchmark.cc  cord.h  cord_test.cc  escaping_benchmark.cc  escaping_test.cc  numbers.h  numbers_benchmark.cc  str_cat_benchmark.cc  str_join_benchmark.cc  str_replace_benchmark.cc  str_split.cc  str_split_benchmark.cc  string_view.h  string_view_benchmark.cc  substitute_benchmark.cc
absl/strings/internal/: charconv_parse_test.cc  cord_data_edge_test.cc  cord_internal.h  cord_rep_btree_navigator_test.cc  cord_rep_btree_test.cc  cordz_handle.cc  cordz_info.cc  damerau_levenshtein_distance_benchmark.cc  memutil_benchmark.cc  ostringstream.cc  ostringstream_benchmark.cc
absl/strings/internal/str_format/: convert_test.cc  float_conversion.cc  parser.cc
absl/synchronization/: BUILD.bazel  CMakeLists.txt  blocking_counter_benchmark.cc  lifetime_test.cc  mutex.cc  mutex.h  mutex_benchmark.cc  mutex_test.cc
absl/synchronization/internal/: graphcycles_benchmark.cc  graphcycles_test.cc
absl/time/: BUILD.bazel  civil_time_benchmark.cc  clock.cc  clock.h  clock_benchmark.cc  duration.cc  duration_benchmark.cc  duration_test.cc  format_benchmark.cc  time.cc  time_benchmark.cc  time_test.cc
absl/time/internal/: get_current_time_chrono_inc.h  get_current_time_posix_inc.h
absl/time/internal/cctz/: BUILD.bazel
absl/types/: BUILD.bazel  variant_benchmark.cc
absl/utility/: BUILD.bazel  utility.h
(+683 files in other folders)
